--- a/redux-example/src/App.css
+++ b/redux-example/src/App.css
@@ -1,11 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  width: 90%;
+  margin: auto;
 }
 
 .App-header {
@@ -19,9 +14,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
